# resume-builder-edunet

./: LICENSE  README.md  capstone_project-internship-final.pptx  pyproject.toml  requirements.txt
ai_resume_builder/: __init__.py
ai_resume_builder/core/: __init__.py  config.py  constants.py  schemas.py  validators.py
ai_resume_builder/export/: __init__.py  pdf_reportlab.py
ai_resume_builder/services/: __init__.py  llm_service.py  resume_builder.py  scoring_service.py
ai_resume_builder/utils/: text_cleaning.py
app/: main.py
tests/: test_export_pdf.py  test_scoring.py  test_validators.py
