[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-resume-builder"
version = "0.1.0"
description = "Streamlit AI resume builder with validation, scoring, and PDF export"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.35",
  "python-dotenv>=1.0",
  "pydantic>=2.6",
  "reportlab>=4.0",
  "scikit-learn>=1.4",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
